DuPont DevSB/src/objects/Business_Process__c.object
<CustomObject>
    <description>Object to capture the Business Processes that are handled inside of Salesforce.com.</description>
    <fields>
        <fullName>Complexity__c</fullName>
        <inlineHelpText>How complex is this Business Process?  Make your best judgement</inlineHelpText>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Design_Elements__c</fullName>
        <description>The Custom Design elements that are used in this Business Process</description>
        <inlineHelpText>Select the Custom Design elements that are used in this Business Process</inlineHelpText>
        <label>Custom Design Elements</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Apex Code</fullName>
                </value>
                <value>
                    <fullName>Apex Trigger</fullName>
                </value>
                <value>
                    <fullName>Approval Process</fullName>
                </value>
                <value>
                    <fullName>Custom Buttons/Links</fullName>
                </value>
                <value>
                    <fullName>Lookup Filter</fullName>
                </value>
                <value>
                    <fullName>Queues</fullName>
                </value>
                <value>
                    <fullName>Sharing Rules</fullName>
                </value>
                <value>
                    <fullName>Territory Management</fullName>
                </value>
                <value>
                    <fullName>Validation Rules</fullName>
                </value>
                <value>
                    <fullName>Visual Force</fullName>
                </value>
                <value>
                    <fullName>WF - Email Alerts</fullName>
                </value>
                <value>
                    <fullName>WF - Field Updates</fullName>
                </value>
                <value>
                    <fullName>WF - Tasks</fullName>
                </value>
                <value>
                    <fullName>Workflow Rules</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integration_Points__c</fullName>
        <description>The external programs that are tied to or are needed for testing for this Business Process</description>
        <inlineHelpText>The external programs that are tied to or are needed for testing for this Business Process</inlineHelpText>
        <label>Integration Points</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BW</fullName>
                </value>
                <value>
                    <fullName>Cognos</fullName>
                </value>
                <value>
                    <fullName>CPMT</fullName>
                </value>
                <value>
                    <fullName>CSAT</fullName>
                </value>
                <value>
                    <fullName>ETL</fullName>
                </value>
                <value>
                    <fullName>IOD</fullName>
                </value>
                <value>
                    <fullName>OMS</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>Tableau</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Owning_Organization__c</fullName>
        <description>The owning Organization that uses this Business Process</description>
        <inlineHelpText>The owning Organization that uses this Business Process</inlineHelpText>
        <label>Owning Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Description__c</fullName>
        <description>The description of the overall Business Process</description>
        <inlineHelpText>Provide the description of the overall Business Process</inlineHelpText>
        <label>Process Description</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_Details__c</fullName>
        <description>Rich Text field to capture Links, Diagrams, pictures that can help describe the Business Process</description>
        <inlineHelpText>Rich Text field to capture Links, Diagrams, pictures that can help describe the Business Process</inlineHelpText>
        <label>Process Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Objects__c</fullName>
        <description>The SFDC Objects or items that this Business Process covers</description>
        <inlineHelpText>The SFDC Objects or items that this Business Process covers</inlineHelpText>
        <label>Related Objects</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Account-Material</fullName>
                </value>
                <value>
                    <fullName>Account Objective</fullName>
                </value>
                <value>
                    <fullName>Account-Product</fullName>
                </value>
                <value>
                    <fullName>Account-Segment</fullName>
                </value>
                <value>
                    <fullName>Activity - Event</fullName>
                </value>
                <value>
                    <fullName>Activity - Task</fullName>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Answer</fullName>
                </value>
                <value>
                    <fullName>Article</fullName>
                </value>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                </value>
                <value>
                    <fullName>Business Partner</fullName>
                </value>
                <value>
                    <fullName>Business Person</fullName>
                </value>
                <value>
                    <fullName>Call Report</fullName>
                </value>
                <value>
                    <fullName>Call Report Item</fullName>
                </value>
                <value>
                    <fullName>Campaign</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Case Actions</fullName>
                </value>
                <value>
                    <fullName>Case-Company</fullName>
                </value>
                <value>
                    <fullName>Case Materials</fullName>
                </value>
                <value>
                    <fullName>Catalog</fullName>
                </value>
                <value>
                    <fullName>Catalog Items</fullName>
                </value>
                <value>
                    <fullName>Catalog Item Subscriptions</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Cost Tracking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The Overall Status of the testing of this Business Process.</description>
        <inlineHelpText>The Overall Status of the testing of this Business Process.  This is your best judgement based on the status of the related Test Scenarios &amp; related Test Results.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <color>#6633FF</color>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Testing In Progress</fullName>
                    <color>#FFFF66</color>
                    <label>Testing In Progress</label>
                </value>
                <value>
                    <fullName>Testing Complete</fullName>
                    <color>#33CC00</color>
                    <label>Testing Complete</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Business Process</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Owning_Organization__c</columns>
        <columns>Program__c</columns>
        <columns>Region__c</columns>
        <columns>Status__c</columns>
        <columns>Complexity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Business Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>